test-cases/negative/complex_001_incomplete_if.lay
# negative test case: incomplete if statement
# expected error: Missing 'then' clause in if statement
# description: Tests that if statements must have complete structure

if x is 5


